--- a/NanoRPC.NET/NanoRPC.NET.csproj
+++ b/NanoRPC.NET/NanoRPC.NET.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <RootNamespace>NanoRPC</RootNamespace>
+    <RootNamespace>NanoRpc</RootNamespace>
     <Authors>Michael Brandon Huddle</Authors>
     <Company />
     <Description>.NET library for communicating with the Nano Cryptocurrency node through JsonRPC</Description>
@@ -12,5 +12,10 @@
     <RepositoryUrl>https://github.com/brandonhuddle/NanoRPC.NET</RepositoryUrl>
     <RepositoryType>Git</RepositoryType>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Folder Include="Extensions\" />
+    <Folder Include="Exceptions\" />
+  </ItemGroup>
 
 </Project>
